<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.huanli233</groupId>
  <artifactId>apkpatcher</artifactId>
  <version>1.0.0</version>
  <name>ApkPatcher</name>
  
  <repositories>
        <repository>
            <id>ali-maven</id>
            <url>http://maven.aliyun.com/nexus/content/groups/public</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>always</updatePolicy>
                <checksumPolicy>fail</checksumPolicy>
            </snapshots>
        </repository>
        <repository>
            <id>repo.maven.apache.org</id>
            <url>https://repo.maven.apache.org/maven2</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>always</updatePolicy>
                <checksumPolicy>fail</checksumPolicy>
            </snapshots>
        </repository>
  		<repository>
            <id>google</id>
            <url>https://dl.google.com/dl/android/maven2/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>always</updatePolicy>
                <checksumPolicy>fail</checksumPolicy>
            </snapshots>
        </repository>
    </repositories>

  
  <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <mainClass>com.huanli233.apkpatcher.main.Main</mainClass>
  </properties>
  
  <dependencies>
  	<dependency>
  		<groupId>org.apktool</groupId>
  		<artifactId>apktool-lib</artifactId>
  		<version>2.9.3</version>
  	</dependency>
  	<dependency>
  		<groupId>com.android.tools.smali</groupId>
  		<artifactId>smali-dexlib2</artifactId>
  		<version>3.0.3</version>
  	</dependency>
  	<dependency>
  		<groupId>com.huanli233</groupId>
  		<artifactId>multidexlib2</artifactId>
  		<version>3.0.3.r2</version>
  	</dependency>
  </dependencies>
  
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.2.4</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <transformers>
                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                  <mainClass>${mainClass}</mainClass>
                </transformer>
              </transformers>
              <filters>
                <filter>
                  <artifact>*:*</artifact>
                  <excludes>
                    <exclude>META-INF/MANIFEST.MF</exclude>
                    <exclude>META-INF/LICENSE.txt</exclude>
                    <exclude>META-INF/NOTICE.txt</exclude>
                    <exclude>META-INF/LICENSE</exclude>
                    <exclude>META-INF/NOTICE</exclude>
                  </excludes>
                </filter>
              </filters>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>io.github.fvarrui</groupId>
        <artifactId>javapackager</artifactId>
        <version>1.7.2</version>
        <configuration>
            <name>apkpatcher</name>
            <bundleJre>true</bundleJre>
            <mainClass>${mainClass}</mainClass>
            <generateInstaller>false</generateInstaller>
            <copyDependencies>true</copyDependencies>
        </configuration>
        <executions>
            <execution>
                <id>bundling</id>
                <phase>package</phase>
                <goals>
                    <goal>package</goal>
                </goals>
                <configuration>
                    <platform>auto</platform>
                    <createZipball>true</createZipball>
                    <vmArgs>-XX:+UseZGC -Dfile.encoding=UTF-8</vmArgs>
                    <winConfig>
		                <generateMsi>false</generateMsi>
		                <generateMsm>false</generateMsm>
            			<headerType>console</headerType>
                    </winConfig>
                </configuration>
            </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>